fixed footer line spacing

--- a/public/assets/css/templatemo-stand-blog.css
+++ b/public/assets/css/templatemo-stand-blog.css
@@ -799,8 +799,8 @@ footer {
 }
 
 footer ul.social-icons {
-	padding-bottom: 60px;
-	margin-bottom: 60px;
+	padding-bottom: 30px;
+	margin-bottom: 30px;
 	border-bottom: 1px solid rgba(250,250,250,0.15);
 }
 
